Update more test expectations